--- a/skeleton/box_model.css
+++ b/skeleton/box_model.css
@@ -1,4 +1,9 @@
 div {
+  height: 400px;
+  width: 400px;  
+
+  padding: 50px;
+  border: 5px solid black;
 }
 
 #first-div {
@@ -7,6 +12,20 @@ div {
 
 #second-div {
   background-color: #ff4136;
+  box-sizing: border-box;
+}
+
+#third-div {
+  box-sizing: content-box;
+  /* height: 10px; */
+}
+
+#image-1-container {
+  width: 200px;
+  height: 600px;
+}
+#image {
+  width: inherit
 }
 
 p {
